tests/negative/ambiguous_import_name.ax
module ambiguous_import_name;

import ambiguous.a;
import ambiguous.b;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    return helper();
}
